--- a/README
+++ b/README
@@ -27,11 +27,11 @@ this: C:\Python23\python C:\Python23\Scripts\supybot-wizard
 
 DEVELOPERS:
 -----------
-Read OVERVIEW to see what the modules are used for.  Read EXAMPLE to
-see some examples of callbacks and commands written for the bot.
+Read OVERVIEW to see what the modules are used for.  Read PLUGIN-EXAMPLE
+to see some examples of callbacks and commands written for the bot.
 Read INTERFACES to see what kinds of objects you'll be dealing with.
 Read STYLE if you wish to contribute; all contributed code must meet
-the guidelines set forth there..
+the guidelines set forth there.
 
 Be sure to run "test/test.py --help" to see what options are available
 to you when testing.  Windows users in particular should be sure to
